# ctr

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.zed/: tasks.json
crates/common/: Cargo.toml
crates/common/src/: console.rs  lib.rs
crates/common/src/command/: mod.rs  types.rs
crates/common/src/env/: mod.rs
crates/common/src/macros/: enum_gen.rs  mod.rs  struct_gen.rs
crates/common/src/string/: ansi.rs  buffer.rs  mod.rs
crates/operation_derive/: Cargo.toml
crates/operation_derive/src/: field.rs  lib.rs
crates/std_v2/: Cargo.toml
crates/std_v2/src/: lib.rs
crates/std_v2/src/command/: mod.rs
crates/std_v2/src/toml/: mod.rs
libs/common/: Cargo.toml
libs/common/src/: console.rs
libs/common/src/command/: mod.rs  types.rs
libs/common/src/env/: mod.rs
libs/common/src/macros/: enum_gen.rs  mod.rs  struct_gen.rs  var.rs
libs/common/src/string/: ansi.rs  buffer.rs  mod.rs
libs/operation_derive/: Cargo.toml
libs/operation_derive/src/: field.rs  lib.rs
libs/std_v2/: Cargo.toml
libs/std_v2/src/toml/: mod.rs
scripts/: build.fish
src/: main.rs
src/operations/: completions.rs  env.rs  help.rs  info.rs  mod.rs  notify.rs  upgrade.rs  version.rs
src/operations/run/: mod.rs
src/subcommand/: completions.rs  help.rs  info.rs  mod.rs  notify.rs  upgrade.rs  version.rs
src/subcommand/run/: mod.rs  ser.rs
