[package]
name = "ctr"
description = "ctr is a cute companion for your system."
version = "0.1.3"
readme = "README.md"
repository = "https://github.com/drgndk/ctr"
edition = "2024"

[dependencies]
std_v2 = { path = "./crates/std_v2" }
common = { path = "./crates/common" }
paste = "~1.0.15"

clap = { version = "~4.5.28", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "~1.0.217", features = ["derive"] }
semver = "~1.0.25"

users = "~0.11.0"
sysinfo = "~0.33.1"
